--- a/_posts/0000-01-02-wshelt21.md
+++ b/_posts/0000-01-02-wshelt21.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our wshelt21's slide"
 ---
-Your text
+This is my awesome slide
 Use the left arrow to go back!
