--- a/_posts/0000-01-02-wshelt21.md
+++ b/_posts/0000-01-02-wshelt21.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our wshelt21's slide"
 ---
-This is my awesome slide
+This is my awesome slide :tada:
 Use the left arrow to go back!
